# AssVec-ADMM-MPI

./: CMakeLists.txt  README.md  groupData.cc  tmp.h
src/: AssVec  FileToWriteSync.cpp  FileToWriteSync.h  Loss.cpp  Loss.h  LossFactory.cpp  LossFactory.h  SkipGramSubproblem.cpp  SkipGramSubproblem.h  WriterThread.cpp  WriterThread.h  args.cpp  args.h  dictionary.cpp  dictionary.h  dictionarybackup.cpp  dictionarybackup.h  gradmanager.cpp  gradmanager.h  main.cpp  mainbackup.cpp  makefile  matrix.cpp  matrix.h  skip-gram-mpi-openmp.cpp  skip-gram-mpi-openmp.h  utility.cpp  utility.h  vector.cpp  vector.h
